@@ -1,6 +1,6 @@
 {"name": "Open_vSwitch",
- "version": "8.3.1",
- "cksum": "3012963480 26720",
+ "version": "8.4.0",
+ "cksum": "2738838700 27127",
  "tables": {
    "Open_vSwitch": {
      "columns": {
@@ -530,6 +530,16 @@
          "type": {"key": {"type": "integer",
                           "minInteger": 0,
                           "maxInteger": 4294967295},
+                  "min": 0, "max": 1}},
+       "stats_interval": {
+         "type": {"key": {"type": "integer",
+                          "minInteger": 1,
+                          "maxInteger": 3600},
+                  "min": 0, "max": 1}},
+       "template_interval": {
+         "type": {"key": {"type": "integer",
+                          "minInteger": 1,
+                          "maxInteger": 3600},
                   "min": 0, "max": 1}},
        "other_config": {
          "type": {"key": "string", "value": "string",
